--- a/.kickstartconfig
+++ b/.kickstartconfig
@@ -1,1 +1,1 @@
-KICKSTART_DOCKER_RUN_OPTS=" -v /var/run/docker.sock:/var/run/docker.sock -v /:/host --privileged"
+KICKSTART_DOCKER_RUN_OPTS=" -v /var/run/docker.sock:/var/run/docker.sock -v /:/hostfs --privileged"
