--- a/.kickstartconfig
+++ b/.kickstartconfig
@@ -1,1 +1,3 @@
-KICKSTART_DOCKER_RUN_OPTS=" -v /var/run/docker.sock:/var/run/docker.sock -v /:/host --privileged"
+KICKSTART_DOCKER_RUN_OPTS=" -v /var/run/docker.sock:/var/run/docker.sock -v /:/host -v /proc:/hostfs/proc:ro -v /sys/fs/cgroup:/hostfs/sys/fs/cgroup:ro --privileged"
+
+KICKSTART_PORTS=""
