--- a/.kick.yml
+++ b/.kick.yml
@@ -1,9 +1,10 @@
 version: 1
-from: "infracamp/kickstart-flavor-base:testing"
+from: "infracamp/kickstart-flavor-gaia:testing"
 
 command:
   build:
     - "sudo scripts/install.sh"
+    - "composer update"
   run:
   dev:
 
